--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,18 +3,32 @@
     package="de.philipphock.android.androidBasics"
     android:versionCode="1"
     android:versionName="1.0" >
-    
-	
-	
+
+
+    <permission
+          android:name="de.philipphock.android.androidBasics.permission.MAPS_RECEIVE"
+          android:protectionLevel="signature"/>
+     
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+	<uses-permission android:name="android.permission.INTERNET"/>
+	
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	
+	<uses-permission android:name="de.philipphock.android.androidBasics.permission.MAPS_RECEIVE"/>
+	
     <uses-feature android:name="android.hardware.sensor.accelerometer" />
     <uses-feature android:name="android.hardware.touchscreen.multitouch" />
+    <uses-feature
+  		android:glEsVersion="0x00020000"
+  		android:required="true"/>
     
 
     <application
@@ -22,6 +36,15 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <meta-data
+    	android:name="com.google.android.maps.v2.API_KEY"
+    	android:value="AIzaSyCzBAOlO25CJiXfrWQ5od5tBPMKR4HEZGk"/>
+        
+        <uses-library android:required="true" 
+	  		android:name="com.google.android.maps">
+		</uses-library>
+		
         <activity
             android:name="de.philipphock.android.androidBasics.Navigation"
             android:label="@string/app_name" >
@@ -38,6 +61,10 @@
         <activity
             android:name="de.philipphock.android.androidBasics.TouchBlob"
             android:label="@string/title_activity_touch_blob" >
+        </activity>
+        <activity
+            android:name="de.philipphock.android.androidBasics.Location"
+            android:label="@string/title_activity_location" >
         </activity>
     </application>
 
